feat: implement secure webhook, supabase schema and professional readme

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Utilize esse modelo para preencher as chaves, sem elas sua aplicação não vai funcionar.
+
 # APP
 NEXT_PUBLIC_SITE_URL=your-production-url.com
 WEBHOOK_SECRET=sua_sequencia_de_16_numeros_aqui
